Fixed issues with spacing scaling for extra images gallery and added uploaded = true state after re-loading image arrays

--- a/styles/pages/DetailsMobile.module.scss
+++ b/styles/pages/DetailsMobile.module.scss
@@ -23,6 +23,7 @@
     }
 }
 
+
 .main_image_and_extra_images_container {
     display: flex;
     flex-direction: column;
@@ -37,7 +38,9 @@
         margin: 0px;
         overflow-x: auto;
         overflow-y: hidden;
-        height: 140px;
+        height: 120px !important;
+        min-height: 120px !important;
+        max-height: 120px !important;
         background-color: $secondary;
 
         .extra_images_gallery_container {
@@ -252,7 +255,7 @@
     width: fit-content;
     z-index: 2;
     position: absolute;
-    top: 0px;
+    bottom: 0px;
     left: 0px;
 
     &:hover {
